--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -137,23 +137,24 @@
   },
   "dashboard": {
     "system-overview": "نظرة عامة على النظام",
-    "total-users": "إجمالي المستخدمين",
+    "total-employees": "إجمالي الموظفين",
+    "total-customers": "إجمالي الزبائن",
     "total-rooms": "إجمالي الغرف",
     "total-reservations": "إجمالي الحجوزات",
     "total-services": "إجمالي الخدمات",
+    "total-services-requests": "إجمالي طلبات للخدمات",
     "performance-metrics": "مقاييس الأداء",
     "avg-services-per-employee": "متوسط الخدمات لكل موظف",
     "avg-reservations-per-day": "متوسط الحجوزات في اليوم",
-    "avg-services-per-day": "متوسط الخدمات في اليوم الواحد",
-    "cancellation-rate": "معدل الإلغاء",
+    "avg-requests-per-day": "متوسط الطلبات في اليوم الواحد",
     "highlights": "أبرز الملامح",
     "employee-of-the-month": "موظف الشهر",
     "top-selling-service": "الخدمة الأكثر مبيعاً",
     "most-booked-room-type": "نوع الغرفة الأكثر حجزاً",
     "reservations": "الحجوزات",
     "reservations-status": "حالة الحجوزات",
-    "services-status": "حالة الخدمات",
-    "services": "الخدمات"
+    "requests-status": "حالة الطلبات",
+    "requests": "الطلبات الخدمات"
   },
   "shared": {
     "entity": {
