Modify Toast Text

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -222,12 +222,12 @@
       "warning": "تحذير",
       "error": "خطأ",
       "something-went-wrong": "لقد حدث خطأ ما !!!",
+      "profile-updated-successfuly": "تم تحديث الملف الشخصي بنجاح!",
       "failed-to-upload-image": "فشل تحميل الصورة!",
       "at-least-one-image-is-required": "مطلوب صورة واحدة على الأقل!",
       "room-added-successfuly": "تمت إضافة الغرفة بنجاح!",
       "room-updated-successfuly": "تم تحديث الغرفة بنجاح!",
       "room-removed": "تمت إزالة الغرفة!",
-      "profile-added-successfuly": "تمت إضافة الملف الشخصي بنجاح!",
       "service-added-successfuly": "تمت إضافة الخدمة بنجاح!",
       "service-updated-successfuly": "تم تحديث الخدمة بنجاح!",
       "service-request-completed": "تم إنجاز طلب الخدمة!",
