--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -222,12 +222,12 @@
       "warning": "Warning",
       "error": "Error",
       "something-went-wrong": "Something went wrong!!",
+      "profile-udpated-successfuly": "Profile udpated successfully!",
       "failed-to-upload-image": "Failed to upload image!",
       "at-least-one-image-is-required": "At least one image is required!",
       "room-added-successfuly": "Room added successfully!",
       "room-updated-successfuly": "Room updated successfully!",
       "room-removed": "Room Removed",
-      "profile-added-successfuly": "Profile added successfully!",
       "service-added-successfuly": "Service added successfully!",
       "service-updated-successfuly": "Service updated successfully!",
       "service-request-completed": "Service Request Completed!",
