Add Room Capacity & Improve RoomsComponent Styling

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -84,6 +84,7 @@
     "type": "النوع",
     "room": "غرفة",
     "hall": "قاعة",
+    "capacity": "السعة",
     "floor": "الطابق",
     "hotel": "الفندق",
     "booked-status": "الحالة",
@@ -92,6 +93,9 @@
     "edit-room": "تعديل الغرفة",
     "delete-room": "حذف الغرفة",
     "room-type-required": "نوع الغرفة مطلوب",
+    "capacity-required": "السعة المطلوبة",
+    "capacity-min": "يجب أن تكون السعة 1 على الأقل",
+    "capacity-max": "يجب ألا تتجاوز السعة 20",
     "floor-required": "الطابق مطلوب",
     "floor-min": "يجب أن يبدأ رقم الطابق ب 2",
     "floor-max": "يجب ألا يتجاوز رقم الطابق 99",
