--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -84,6 +84,7 @@
     "type": "Type",
     "room": "Room",
     "hall": "Hall",
+    "capacity": "Capacity",
     "floor": "Floor",
     "hotel": "Hotel",
     "booked-status": "Status",
@@ -92,6 +93,9 @@
     "edit-room": "Edit Room",
     "delete-room": "Delete Room",
     "room-type-required": "Room Type Required",
+    "capacity-required": "Capacity Required",
+    "capacity-min": "Capacity should be at least 1",
+    "capacity-max": "Capacity should not exceed 20",
     "floor-required": "Floor Required",
     "floor-min": "Floor level should start with 2",
     "floor-max": "Floor level should not exceed 99",
